# gemini-embedding-2-mcp-server

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: agent-guardrails.md  architecture.md  multimodality.md  releasing.md  result-model.md  use-cases.md
docs/plans/: 2026-04-10-vnext-implementation.md  2026-04-10-vnext-roadmap.md
src/gemini_mcp/: server.py
src/gemini_mcp/db/: store.py
src/gemini_mcp/parsers/: scanner.py
tests/: test_gemini.py  test_scanner.py  test_server.py
